# nurc-lax-robot-legacy2019

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  toolchain-arm-linux-gnueabi.cmake
3DPrintParts/: HeadHolder.SLDPRT  HeadHolder.STL  Slider.SLDPRT  Slider.STL
ConvertCVATtoCSV/: 4M_Center.xml  4M_Center1.xml  8M_Center3.xml  8M_TightLeft.xml  8M_TightLeft_1.xml  8M_TightRight.xml  8M_TightRight1.xml  8M_TightRight2.xml  ConvertCVATtoCSV.cbp  ConvertCVATtoCSV.cpp  ConvertCVATtoCSV.depend  ConvertCVATtoCSV.layout  ConvertCVATtoCSV.vcxproj  ConvertCVATtoCSV.vcxproj.filters  main.cpp
ConvertCVATtoCSV/Debug/: ConvertCVATtoCSV.pch  vc141.idb
ConvertCVATtoCSV/labels/: 4Meters_Center1_frame_1.txt  4Meters_Center1_frame_114.txt  4Meters_Center1_frame_150.txt  4Meters_Center1_frame_151.txt  4Meters_Center1_frame_152.txt  4Meters_Center1_frame_153.txt  4Meters_Center1_frame_154.txt  4Meters_Center1_frame_155.txt  4Meters_Center1_frame_156.txt  4Meters_Center1_frame_157.txt  4Meters_Center1_frame_158.txt  4Meters_Center1_frame_159.txt  4Meters_Center1_frame_161.txt  4Meters_Center_1_frame_0.txt  4Meters_Center_1_frame_151.txt  4Meters_Center_1_frame_152.txt  4Meters_Center_1_frame_154.txt  4Meters_Center_1_frame_155.txt  4Meters_Center_1_frame_156.txt  4Meters_Center_1_frame_157.txt  4Meters_Center_1_frame_158.txt  4Meters_Center_1_frame_159.txt  4Meters_Center_frame_124.txt  4Meters_Center_frame_126.txt  4Meters_Center_frame_131.txt  4Meters_Center_frame_133.txt  4Meters_Center_frame_155.txt  4Meters_Center_frame_157.txt  4Meters_Center_frame_158.txt  4Meters_Center_frame_160.txt  4Meters_Center_frame_168.txt  4Meters_Center_frame_174.txt  4Meters_Center_frame_175.txt  4Meters_Center_frame_179.txt  4Meters_Center_frame_180.txt  4Meters_Center_frame_182.txt  4Meters_Center_frame_184.txt  4Meters_Center_frame_187.txt  4Meters_Center_frame_190.txt  4Meters_Center_frame_192.txt  (+372 more)
Image Creation/: main.cpp
Image Tracking/: README.md
Machine_Learning/: classes.names  darknet-tiny.data  darknet-yolov3-tiny.cfg  darknet-yolov3.cfg  darknet.data  laxball_test.txt  laxball_train.txt  plotTrainLoss.py  splitTrainAndTest.py  splitTrainAndTest2.py
Machine_Learning/labels/: 4Meters_Center1_frame_127.txt  4Meters_Center1_frame_151.txt  4Meters_Center1_frame_154.txt  4Meters_Center1_frame_161.txt  4Meters_Center_frame_103.txt  4Meters_Center_frame_123.txt  4Meters_Center_frame_124.txt  4Meters_Center_frame_126.txt  4Meters_Center_frame_128.txt  4Meters_Center_frame_129.txt  4Meters_Center_frame_130.txt  4Meters_Center_frame_157.txt  (+183 more)
MainEvent/: CMakeLists.txt  Server.cpp  main.cpp
Object Tracking/: CMakeLists.txt  README.md  darknet-yolov3.cfg  main.cpp  mainLinuxOLD.cpp  test.cpp  yolov3.cfg
Object Tracking/LGR/: HSV.hpp  axis.hpp  ball.hpp  camera.hpp  constants.hpp  mController.hpp  robot.hpp
Object Tracking/ML/: yolo_v2_class.hpp
Object Tracking/Object Tracking/LGR/: camera.hpp  constants.hpp  mController.hpp
Object Tracking/Roboteq/: Constants.h
OpenCVTest/: CMakeLists.txt  OpenCVTest.cpp  OpenCVTest.sln  Slow_OpenCVTest.cpp  sample.cpp
OpenCVTest/OpenCVTest/: OpenCVTest.cpp  OpenCVTest.vcxproj  OpenCVTest.vcxproj.filters
OpenCVTest/OpenCVTest/Debug/: OpenCVTest.pch  vc141.idb
OpenCVTest/OpenCVTest/Debug/OpenCVTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenCVTest.lastbuildstate
OpenCVTest/OpenCVTest/LAXShootingFootageL/: 4Meters_Center.avi  4Meters_Center2.avi  4Meters_FarLeft.avi  4Meters_FarLeft1.avi  4Meters_FarLeft2.avi  4Meters_FarRight.avi  4Meters_FarRight1.avi  4Meters_FarRight2.avi  4Meters_TightLeft.avi  4Meters_TightLeft1.avi  4Meters_TightRight.avi  4Meters_TightRight1.avi  8Meters_Center1.avi  8Meters_Center2.avi  8Meters_Center3.avi  8Meters_FarLeft.avi  8Meters_FarLeft1.avi  8Meters_FarRight.avi  8Meters_FarRight1.avi  8Meters_FarRight2.avi  8Meters_TightLeft1.avi  8Meters_TightRight.avi  8Meters_TightRight1.avi  8Meters_TightRight2.avi
OpenCVTest/OpenCVTest/LAXShootingFootageR/: 4Meters_Center.avi  4Meters_Center1.avi  4Meters_Center2.avi  4Meters_FarLeft.avi  4Meters_FarLeft1.avi  4Meters_FarLeft2.avi  4Meters_FarRight.avi  4Meters_FarRight1.avi  4Meters_FarRight2.avi  4Meters_TightLeft.avi  4Meters_TightLeft1.avi  4Meters_TightRight.avi  4Meters_TightRight1.avi  8Meters_Center1.avi  8Meters_Center2.avi  8Meters_Center3.avi  8Meters_FarLeft.avi  8Meters_FarLeft1.avi  8Meters_FarRight.avi  8Meters_FarRight1.avi  8Meters_FarRight2.avi  8Meters_TightLeft.avi  8Meters_TightLeft1.avi  8Meters_TightRight.avi  8Meters_TightRight1.avi  8Meters_TightRight2.avi
OpenCVTest/OpenCVTest/x64/Debug/: OpenCVTest.pch  vc141.idb
OpenCVTest/OpenCVTest/x64/Debug/OpenCVTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenCVTest.lastbuildstate
OpenCVTest/OpenCVTest/x64/Release/: OpenCVTest.pch
OpenCVTest/OpenCVTest/x64/Release/OpenCVTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenCVTest.lastbuildstate  OpenCVTest.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OpenCVTest/x64/Release/: OpenCVTest.iobj  OpenCVTest.ipdb
cmake/: Findlibpixyusb.cmake
include/: lax_robot.h
interface/: app.js  package-lock.json  package.json
mkdirp/: package.json
morgan/: package.json
nurc-lax-robot/: CMakeLists.txt  README.md
nurc-lax-robot/include/: lax_robot.h
nurc-lax-robot/src/: lax_robot.cc
old stuff/: .gitignore  README.md
old stuff/tools/: CMakeLists.txt
on-headers/: package.json
optimist/: package.json
promise/: package.json
reference-TESTING/copy_of_Roboteq/: CMakeLists.txt  test_roboteq.sln
reference-TESTING/copy_of_Roboteq/src/: main.cpp
reference-TESTING/copy_of_Roboteq/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
reference-TESTING/copy_of_Roboteq/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
scripts/: build_lax_robot_main.sh
src/: lax_robot.cc  lax_robot_main.cc  lax_robot_pixies.cpp  triangulation.cc
tools/: toolchain-arm-linux-gnueabi.cmake
(+88 files in other folders)
